tests/fixtures/errors/import_nonexistent.ore
use "nonexistent_module.ore"

fn main
  print "should not reach here"
